<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_servicii"
            android:icon="@drawable/ic_baseline_miscellaneous_services_24"
            android:title="@string/menu_servicii" />
        <item
            android:id="@+id/nav_frizeri"
            android:icon="@drawable/ic_baseline_content_cut_24"
            android:title="@string/menu_frizeri" />

        <item
            android:id="@+id/nav_locatii"
            android:icon="@drawable/ic_baseline_home_work_24"
            android:title="@string/locatie"/>
    </group>
</menu>